--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="Sound">Sound by right</string>
-	<string
-		name="Words">Words</string>
-	<string
-		name="Title">Title</string>
+    <string
+        name="Words">Words</string>
+    <string
+        name="Title">Title</string>
 
-	<string
-		name="app_name">Vocabs</string>
-	<string
-		name="EditWords">Edit list</string>
-	<string
-		name="WordLists">Word lists</string>
-	<string
-		name="Delete">Delete</string>
-	<string
-		name="Add">New list</string>
-	<string
-		name="Edit">Edit</string>		
-	<string
-		name="SelectFile">Select file</string>	
-	<string
-		name="NoMoreWordlists">No more words</string>
-	<string
-		name="Import">Import...</string>
-	<string
-		name="Error">Error</string>
-	<string
-		name="ImportError">Failed to read %s</string>
-	<string
-		name="Export">Export</string>	
-	<string
-		name="Exported">Word list exported to %s</string>	
-	<string
-		name="ExportError">Word list couldn\'t be exported to %s</string>	
-	<string  name="Prefs">Settings</string>
-	<string  name="Help">Help</string>	
+    <string
+        name="app_name">Vocabs</string>
+    <string
+        name="EditWords">Edit list</string>
+    <string
+        name="WordLists">Word lists</string>
+    <string
+        name="Delete">Delete</string>
+    <string
+        name="Add">New list</string>
+    <string
+        name="Edit">Edit</string>
+    <string
+        name="SelectFile">Select file</string>
+    <string
+        name="NoMoreWordlists">No more words</string>
+    <string
+        name="Import">Import...</string>
+    <string
+        name="Error">Error</string>
+    <string
+        name="ImportError">Failed to read %s</string>
+    <string
+        name="Export">Export</string>
+    <string
+        name="Exported">Word list exported to %s</string>
+    <string
+        name="ExportError">Word list couldn\'t be exported to %s</string>
+    <string  name="Prefs">Settings</string>
+    <string  name="Help">Help</string>
     <string name="Right">C:</string>
     <string name="False">W:</string>
     <string name="ButtonsX">Columns</string>
@@ -112,27 +112,28 @@
         </p>
         ]]>
      </string>
-     <string name="TextSizeButtons">Text buttons</string>
-     <string name="TextSizeDescription">Change text size</string>
-     <string name="TextSizeQuestion">Text size question word</string>
-     <string translatable="false" name="ohoh">Oh, Oh!</string>
-     <string translatable="false" name="solala">So lala</string>
-     <string translatable="false" name="easy">Easy</string>
-     <string name="FilterHint">type here to filter</string>
-     <string name="MagnifierText">Search ...</string>
-     <string name="EditList">Edit list</string>
-     <string name="Language1">Language 1</string>
-     <string name="Language2">Language 2</string>
-     <string name="AddWord">Add new item</string>
-     <string name="PleaseWait">Please wait</string>
-     <string name="GetLists">Getting lists ...</string>
-     <string name="GetWords">Getting words ...</string>
-     <string name="ImportProgress">Importing ...</string>
-     <string name="ImportFromDictCC">Import from dict.cc</string>
-     <string name="ErrorFromDictCC">Error importing lists from dict.cc, check your internet connection.</string>
-     <string name="ErrorGettingWords">Error getting words from this list</string>
-     <string name="Translate">Translate</string>
-     <string name="TargetLanguageError">Wrong target language, please specify a language.</string>
-     <string name="RecordSaved">Record was saved</string>
-     <string name="RecordSaveFail">Record incorrect and wasn\'t saved</string>
+    <string name="TextSizeButtons">Text buttons</string>
+    <string name="TextSizeDescription">Change text size</string>
+    <string name="TextSizeQuestion">Text size question word</string>
+    <string translatable="false" name="ohoh">Oh, Oh!</string>
+    <string translatable="false" name="solala">So lala</string>
+    <string translatable="false" name="easy">Easy</string>
+    <string name="FilterHint">type here to filter</string>
+    <string name="MagnifierText">Search ...</string>
+    <string name="EditList">Edit list</string>
+    <string name="Language1">Language 1</string>
+    <string name="Language2">Language 2</string>
+    <string name="AddWord">Add new item</string>
+    <string name="PleaseWait">Please wait</string>
+    <string name="GetLists">Getting lists ...</string>
+    <string name="GetWords">Getting words ...</string>
+    <string name="ImportProgress">Importing ...</string>
+    <string name="ImportFromDictCC">Import from dict.cc</string>
+    <string name="ErrorFromDictCC">Error importing lists from dict.cc, check your internet connection.</string>
+    <string name="ErrorGettingWords">Error getting words from this list</string>
+    <string name="Translate">Translate</string>
+    <string name="TargetLanguageError">Wrong target language, please specify a language.</string>
+    <string name="RecordSaved">Record was saved</string>
+    <string name="RecordSaveFail">Record incorrect and wasn\'t saved</string>
+    <string name="ListAutoSort">Auto sort Easy, So lala, Oh, Oh!</string>
 </resources>
