--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="delete">Delete</string>
+    <string name="show">Show</string>
+    <string name="deselect_all">Deselect All</string>
+    <string name="select_all">Select All</string>
     <string name="Sound">Sound by right</string>
     <string
         name="Words">Words</string>
